--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,12 @@
     line-height: 26px;
     /* 162.5% */
 }
+.card-title{
+    color: #131318;
+    font-size: 1.5rem;
+    font-weight: 800;
+
+}
 
 
 
@@ -112,7 +118,7 @@ nav ul li a {
 
 /* banner related style */
 .banner {
-    background-image: url("../Images/Group_13.png");
+    background-image: url("Images/Group_13.png");
     background-size: cover;
     background-repeat: no-repeat;
     /* width: 1170px; */
@@ -150,9 +156,6 @@ select {
     background: #FFF;
     padding: 1rem;
     border: 0;
-
-
-
 }
 
 /* popular related style */
@@ -226,7 +229,38 @@ select {
 /* choose section related style */
 .choose-text-container {
     text-align: center;
+
 }
+.choose-card-section{
+    display: flex;
+    gap:1.5rem
+}
+.choose-card-one, .choose-card-inner{
+    border-radius: 1rem;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    padding:2rem;
+}
+.choose-card-two{
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+    padding:2rem;
+}
+
+.choose-card-one h4, .choose-card-two h4{
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    
+}
+.choose-card-inner{
+    max-width: 573px;
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    margin-bottom: 100px;
+}
+
+
 
 
 @media screen and (max-width:576px) {
@@ -237,7 +271,8 @@ select {
     .popular-container,
     .img-section1,
     .img-section2,
-    .img-section3 {
+    .img-section3,
+    .choose-card-section {
         flex-direction: column;
     }
 
