--- a/styles/style.css
+++ b/styles/style.css
@@ -259,7 +259,94 @@ select {
     margin-top: 1.5rem;
     margin-bottom: 100px;
 }
+/* newsletter section related syle */
+.newsletter-container{
+    display: flex;
+    gap:1.5rem
+}
+.newsletter-form{
+    border-radius: 16px;
+border: 1px solid #FF5400;
+padding:2.5rem
+}
+.newsletter-form input{
+    width: 100%;
+    display: block;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    margin-bottom:1rem ;
+    padding:1rem;
+    border:0;
+}
+.newsletter-form button{
 
+    color:#FFF;
+    text-align: center;
+    border-radius: 8px;
+    font-size: 20px;
+    font-weight: 800;
+    background: #FF5400;
+  padding:16px 148px;
+    border:0;
+}
+.newsletter-img img{
+   width: 100%;
+}
+.newsletter-img .save-up{
+    border-radius: 16px;
+    background-color: #FF5400;
+    text-align: center;
+    padding:10px 15px;
+    margin: 0;
+    
+}
+
+/* footer section related style */
+footer{
+     background-color: rgba(19, 19, 24, 0.05);
+     padding-top: 80px;
+     padding-bottom: 80px;
+     margin-top:80px;
+}
+.footer-container{
+    text-align: center;
+}
+.footer-header-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-header-img img{
+    width: 40px;
+    height: 46.673px;
+    margin-right: 1rem;
+}
+.footer-header-img h3{
+    color: #131318;
+    font-size: 2rem;
+    font-weight: 800;
+}
+
+.footer-header-img .travel-span{
+    color: #FF5400;
+    font-size: 2rem;
+    font-weight: 800;
+
+}
+.footer-icons i{
+    font-size: 2rem;
+    margin-right: 1rem;
+}
+.footer-container hr{
+    border: 1px solid rgba(19, 19, 24, 0.10);
+    max-width:872px;
+    margin:80px auto;
+}
+.footer-container  .rights{
+    color: #131318;
+    font-size: 1rem;
+    font-weight: 300;
+}
 
 
 
@@ -272,7 +359,8 @@ select {
     .img-section1,
     .img-section2,
     .img-section3,
-    .choose-card-section {
+    .choose-card-section,
+    .newsletter-container {
         flex-direction: column;
     }
 
